# NeuralPlusPlus

./: .gitignore  CMakeLists.txt
include/: tensor.hpp  tensor_slice.hpp
src/: main.cpp  tensor.cpp  tensor_slice.cpp
